# irrigation-system

./: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  cabal.project  flake.nix  irrigation-controller-state-diagram.dot  nixos-module.nix
arduino/: README.md  arduino.ino  flake.nix
controller/: IrrigationController.cpp  IrrigationController.h  StateMachine.cpp  StateMachine.h  Types.h  WiFiConnection.cpp  WiFiConnection.h  WiFiCredentials.cpp  WiFiCredentials.h  WiFiStateMachine.cpp  WiFiStateMachine.h  WiFiTypes.h  WiFiUI.cpp  WiFiUI.h  controller.ino
web-server/: irrigation-web-server.cabal
web-server/app/: Main.hs
web-server/migrations/: 20250515210101_create_auth_tables.sql
web-server/src/: WebServer.hs
